# qtty-cpp

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  gen_cpp_units.py  run-ci-locally.sh
.github/workflows/: ci-build-test-docs.yml  ci-coverage.yml  ci-lint.yml  ci-package.yml  ci-release.yml  ci.yml
build-coverage/: Doxyfile.qtty_cpp
docs/: DOCUMENTATION_SUMMARY.md  Doxyfile.in  QUICK_REFERENCE.md  README.md  architecture.md  build-and-testing.md  extending-units.md  mainpage.md
docs/api/: quantities.md
examples/: all_features.cpp  demo.cpp  serialization.cpp
gen_cpp_units/: Cargo.toml
gen_cpp_units/src/: main.rs
include/qtty/: ffi_core.hpp  literals.hpp  qtty.hpp  serialization.hpp
include/qtty/units/: acceleration.hpp  amount.hpp  angular.hpp  area.hpp  capacitance.hpp  charge.hpp  current.hpp  density.hpp  dimensionless.hpp  energy.hpp  force.hpp  frequency.hpp  illuminance.hpp  inductance.hpp  inverse_solid_angle.hpp  length.hpp  luminous_flux.hpp  luminous_intensity.hpp  magnetic_flux.hpp  magnetic_flux_density.hpp  mass.hpp  photon_radiance.hpp  power.hpp  pressure.hpp  radiance.hpp  resistance.hpp  solid_angle.hpp  spectral_photon_radiance.hpp  spectral_radiance.hpp  temperature.hpp  time.hpp  velocity.hpp  voltage.hpp  volume.hpp
scripts/: build.sh  ci.sh  coverage.sh  lint.sh  test.sh
tests/: fixtures.hpp  main.cpp  test_angular.cpp  test_derived.cpp  test_dimension_safety.cpp  test_extended_inventory.cpp  test_ffi.cpp  test_formatting.cpp  test_length.cpp  test_mass.cpp  test_operations.cpp  test_power.cpp  test_precision.cpp  test_serialization.cpp  test_time.cpp
